--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="css/main.css">
 
 
         <script>
@@ -75,6 +75,8 @@
 
         </div>
 
-        <script src="main.js"></script>
+        <script src="js/main.js"></script>
+        <script src="js/utils.js"></script>
+        <script src="js/sockioClient.js"></script>
     </body>
 </html>
