upload many files to db

--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -3,8 +3,9 @@
 <div>
     <form action="/upload" enctype="multipart/form-data" method="POST">
         <input type="file" name="upload">
-        <input type="text" name="name">
-        <input type="text" name="desc">
+        <input type="text" name="name" placeholder="Name">
+        <input type="text" name="desc" placeholder="Description">
+        <input type="file" name="imgs" multiple>
         <input type="submit">
     </form>
 </div>
