--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,8 @@
 
         <script>
             class Card{
-                constructor(name, image, desc){
+                constructor(id, name, image, desc){
+                    this.id = id;
                     this.name = name;
                     this.type = "";
                     this.image = image;
@@ -26,7 +27,9 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script> -->
+        <script src="/socket.io/socket.io.js"></script>
+        
     </head>
 
     <body>
@@ -63,7 +66,7 @@
                                         <img class="content" src="<%=card.image%>" alt="">
                                         <h1><%=card.name%></h1>
                                         <p><%=card.desc%></p>
-                                        <button>Download</button>
+                                        <button type="button" class="download" onclick="">Download</button>
                                     </div>
                                 <%})%>
                             <% } %>
