--- a/public/css/main.css
+++ b/public/css/main.css
@@ -36,23 +36,24 @@ img{
 }
 
 .sidenav{
-    height: 100%;
+    height: 88%;
     width: 16%;
-    position: fixed;
+    position: absolute;
     z-index: 1;
-    top: 0;
+    top: 90%;
     left: 0;
     background-color: rgba(0, 0, 0, 0.3);
     overflow-x: hidden;
-    padding-top: 16%;
+    padding-top: 10%;
 }
+
 
 .sidenav::-webkit-scrollbar {
     display: none;
 }
 
 .sidenav button{
-    margin-top: 12%;
+    margin-top: 8%;
     display: block;
     background-color: gray;
     color: white;
@@ -90,7 +91,7 @@ img{
 .middle .items{
     position: absolute;
     -ms-overflow-style: none;
-    background-color: rgba(119, 119, 119, 0.651);
+    background-color: rgba(1, 126, 119, 0.3);
     overflow-x: hidden;
     overflow-y: auto;
     max-height: 100%;
@@ -139,8 +140,10 @@ img{
 
 
 #myVideo{
+    object-fit: fill;
     width: 100%;
+    height: 90%;
     position: relative;
-    left: 16%;
+    /* left: 16%; */
     bottom: 0;
 }
