--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,6 +58,7 @@
                     <div class="options">
 
                         <div class="sidenav" id="ltSidenav">
+                            <button class="tablinks">All</button>
                             <button class="tablinks">2D</button>
                             <button class="tablinks">Isometric</button>
                             <button class="tablinks">3D</button>
