--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,12 +58,12 @@
                     <div class="options">
 
                         <div class="sidenav" id="ltSidenav">
-                            <button class="tablinks">All</button>
-                            <button class="tablinks">2D</button>
-                            <button class="tablinks">Isometric</button>
-                            <button class="tablinks">3D</button>
-                            <button class="tablinks">UI</button>
-                            <button class="tablinks">Sound</button>
+                            <button onclick="sendCategory(0)" class="tablinks">All</button>
+                            <button onclick="sendCategory(1)" class="tablinks">2D</button>
+                            <button onclick="sendCategory(2)" class="tablinks">Isometric</button>
+                            <button onclick="sendCategory(3)" class="tablinks">3D</button>
+                            <button onclick="sendCategory(4)" class="tablinks">UI</button>
+                            <button onclick="sendCategory(5)" class="tablinks">Sound</button>
                         </div>
         
                     </div>
