implemented categories when uploading

--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -6,6 +6,18 @@
         <input type="text" name="name" placeholder="Name">
         <input type="text" name="desc" placeholder="Description">
         <input type="file" name="imgs" multiple>
+        <br>
+        <input type="radio" name="category" value="1" id="2D">
+        <label for="2D">2D</label>
+        <input type="radio" name="category" value="2" id="Iso">
+        <label for="Iso">Isometric</label>
+        <input type="radio" name="category" value="3" id="3D">
+        <label for="3D">3D</label>
+        <input type="radio" name="category" value="4" id="UI">
+        <label for="UI">UI</label>
+        <input type="radio" name="category" value="5" id="Sound">
+        <label for="Sound">Sound</label>
+        <br>
         <input type="submit">
     </form>
 </div>
